--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,11 +32,20 @@ body {
 }
 
 .page-heading {
-  font-weight: 500;
-  font-size: 1.5rem;
-  line-height: 2rem;
+  line-height: 2.5rem;
   margin-top: 32px;
   margin-bottom: 16px;
+  color: rgb(243 244 246);
+  font-weight: 500;
+  font-size: 2rem;
+}
+
+.page-subheading {
+  line-height: 2rem;
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-top: 24px;
+  margin-bottom: 12px;
   color: rgb(243 244 246);
 }
 
